--- a/rootdir/etc/init.g3.rc
+++ b/rootdir/etc/init.g3.rc
@@ -1251,7 +1251,7 @@ on usb_debug
     start usbdebug-manager
 
 # Performance
-on property:service.bootanim.exit=1
+on property:sys.boot_completed=1
     write /sys/module/lpm_levels/enable_low_power/l2 "4"
     write /sys/module/msm_pm/modes/cpu0/power_collapse/suspend_enabled "1"
     write /sys/module/msm_pm/modes/cpu1/power_collapse/suspend_enabled "1"
@@ -1291,14 +1291,9 @@ on property:service.bootanim.exit=1
     write /sys/module/cpu_boost/parameters/input_boost_freq "1497600"
     write /sys/module/cpu_boost/parameters/input_boost_ms "40"
 
-on property:init.svc.bootanim=running
     # Disable LG screen sharpening
     write /sys/devices/virtual/graphics/fb0/sharpening 0
-    # Switch to NOOP and performance mode while booting
-    setprop sys.perf.profile 2
-    write /sys/block/mmcblk0/queue/scheduler noop
 
-on property:init.svc.bootanim=stopped
     # Switch to fiops and balanced mode after boot for better UX
     setprop sys.perf.profile 1
     write /sys/block/mmcblk0/queue/scheduler fiops
